--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   
-  google_fonts: ^4.0.3 
-  animated_button: ^0.2.0
-  flutter_custom_clippers: ^2.1.0
+  
+  easy_splash_screen: ^1.0.4
+  google_fonts: ^4.0.4
+  flutter_svg: ^2.0.5
+  provider: ^6.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,8 +66,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/moto.png
-    - lib/assets/bg.gif
+    - assets/images/white_logo.png
+    - assets/images/google.png
+    - assets/images/vk.png
+    - assets/images/licota_logo.png
+    - assets/images/red_logo.png
+    - assets/images/first_illustration.png
+    - assets/images/illustartion.png
+    - assets/images/illustration3.png
+    - assets/images/illustration4.png
+    - assets/images/moto.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,10 +89,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/MontserratAlternates-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
