--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,15 @@ dependencies:
   google_fonts: ^4.0.4
   flutter_svg: ^2.0.5
   provider: ^6.0.5
-
+  change_app_package_name: ^1.1.0
+  
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.5.0
+  firebase_core: ^2.11.0
+
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +81,7 @@ flutter:
     - assets/images/illustration3.png
     - assets/images/illustration4.png
     - assets/images/moto.png
+    - assets/images/verify.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
