--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: motoappv2
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-290.3.beta <4.0.0'
+  sdk: ">=3.0.0-290.3.beta <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,21 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  
+
   easy_splash_screen: ^1.0.4
   google_fonts: ^4.0.4
   flutter_svg: ^2.0.5
   provider: ^6.0.5
   change_app_package_name: ^1.1.0
-  
-  
+  scroll_date_picker: ^3.7.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.5.0
   firebase_core: ^2.11.0
-
+  cloud_firestore: ^4.7.0
 
 dev_dependencies:
   flutter_test:
@@ -56,14 +55,18 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/MyMotoIcon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -83,6 +86,7 @@ flutter:
     - assets/images/moto.png
     - assets/images/verify.jpg
     - assets/images/read.png
+    - assets/images/MyMotoIcon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -100,8 +104,8 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: assets/fonts/MontserratAlternates-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+    #       - asset: fonts/Schyler-Italic.ttf
+    #         style: italic
     - family: Roboto
       fonts:
         - asset: assets/fonts/Roboto-Regular.ttf
