--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.5
   change_app_package_name: ^1.1.0
   scroll_date_picker: ^3.7.0
+  collection: ^1.17.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
