--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   change_app_package_name: ^1.1.0
   scroll_date_picker: ^3.7.0
   collection: ^1.17.1
+  salomon_bottom_bar: ^3.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
