--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   scroll_date_picker: ^3.7.0
   collection: ^1.17.1
   salomon_bottom_bar: ^3.3.2
-
+  google_sign_in: ^6.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
