--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   firebase_auth: ^4.5.0
   firebase_core: ^2.11.0
   cloud_firestore: ^4.7.0
+  flutter_chatgpt_api: ^1.1.0
+  chat_gpt_sdk: ^2.0.6
+  velocity_x: ^3.6.0
+  
 
 dev_dependencies:
   flutter_test:
